2022-02-04 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* support/scripts/sdcc.nsi:
	  (Un)install sdas6500 assembler, fix left-over mcs51 huge lib after uninstall (bug #2972),
	  installation options for r2ka and mos6502 libraries.

2022-02-03 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* doc/README.txt:
	  Update port status in README.

2022-02-02 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* support/makebin/makebin.c:
	  Fix segmentation fault when using -yp and patching of wrong address.

2022-02-03 Benedikt Freisen <b.freisen AT gmx.net>

	* doc/sdccman.lyx:
	  Update documentation.

2022-02-03 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* device/lib/printf_large.c,
	  src/SDCCBBlock.h,
	  src/SDCCast.c,
	  src/SDCCdwarf2.c,
	  src/SDCCicode.c,
	  src/SDCClabel.c,
	  src/SDCCloop.c,
	  src/SDCCmacro.c,
	  src/SDCCset.c,
	  src/SDCCutil.c,
	  src/ds390/ralloc.c,
	  src/z80/ralloc.c,
	  support/regression/generate-cases.py:
	  Fix typos in comments.
	* src/z80/gen.c,
	  src/pdk/gen.c,
	  src/stm8/gen.c,
	  src/stm8/main.c,
	  src/SDCCval.h,
	  src/SDCCval.c:
	  Use CSD representation for multiplication by literal in a.

2022-02-02 Gabriele Gorla <gorlik@yahoo.com>

	* sdcc/src/mos6502/gen.c,
	  sdcc/src/mos6502/gen.H,
	  sdcc/src/mos6502/main.c,
	  sdcc/src/mos6502/ralloc.c,
	  sdcc/src/mos6502/ralloc.h,
	  sdcc/src/mos6502/ralloc2.cc:  
	  Removed dead code and refactored load/stroreRegTemp.
      
2022-02-02 Benedikt Freisen <b.freisen AT gmx.net>

	* support/scripts/sdcc.ico:
	  Add a 48x48 pixel icon.

2022-02-02 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* sdas/asxxsrc/asxxxx.h:
	  Raise NCPS to 256 like in upstream ASXXXX. (workaround for bug-3277)

2022-02-02 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* support/makebin/makebin.c:
	  Improve SMS/GG defaults and allow to define an offset that's skipped for the rom.

2022-02-02 Benedikt Freisen <b.freisen AT gmx.net>

	* src/SDCCdwarf2.c,